# NewBreeze

./: .gitignore  .gitlab-ci.yml  .travis.yml  BuildPlugins.sh  ChangeLog  Global.hpp  INSTALL  LICENSE  Main.cpp  NBDefaultPlugins.hpp  NBPluginInterface.hpp  NBPreviewInterface.hpp  NewBreeze.pro  NewBreeze.qrc  PKGBUILD  README  README.md  ReleaseNotes  Suggestions  TODO  debian-depends  fedora-depends  index.html  meson.build  meson_options.txt  newbreeze.desktop  newbreeze2.desktop  newbreeze_3.0.0a_amd64.deb  optionparser.hpp
app/: CMakeLists.txt  ChangeLog  Global.hpp  Main.cpp  NewBreeze.qrc  README  app.pro  meson.build
app/Core/ArgParser/: NBCLParser.cpp  NBCLParser.hpp
app/Core/AutoMount/: NBAutoMount.cpp  NBAutoMount.hpp  udisks2.cpp  udisks2.h
app/Core/BookmarkInfo/: NBBookmarkInfo.cpp  NBBookmarkInfo.hpp
app/Core/Circle/: NBCircle.hpp
app/Core/DeleteManager/: NBDeleteManager.cpp  NBDeleteManager.hpp
app/Core/FSWatcher/: NBFileSystemWatcher.cpp  NBFileSystemWatcher.hpp
app/Core/IconProvider/: NBIconManager.cpp  NBIconManager.hpp  NBIconProvider.cc  NBIconProvider.cpp  NBIconProvider.hh  NBIconProvider.hpp
app/Core/Logger/: NBLogger.cpp  NBLogger.hpp
app/Core/Other/: NBFunctions.cpp  NBFunctions.hpp
app/Core/ProcessManager/: NBAbstractProcess.hpp  NBDeleteProcess.cpp  NBDeleteProcess.hpp  NBIOProcess.cpp  NBIOProcess.hpp  NBProcessManager.cpp  NBProcessManager.hpp
app/Data/: NBFSExtData.conf  Shortcuts.conf
app/Gui/NewBreezeUI/: NewBreeze.cpp  NewBreeze.hpp  NewBreezeTray.cpp  NewBreezeTray.hpp
app/Gui/Others/: NBStartup.cpp
app/Vault/: Global2.hpp  Main.cpp  NBVault.cpp  NBVault.hpp  NBVaultDatabase.cpp  NBVaultDatabase.hpp  Vault.pro
app/Vault/CryFS/: CryFS.cpp  CryFS.hpp
app/Vault/EncFS/: NBEncFS.cpp  NBEncFS.hpp
app/Vault/KeyDialog/: NBPasswordDialog.cpp  NBPasswordDialog.hpp  NBPasswordEdit.cpp  NBPasswordEdit.hpp  NBPasswordInput.cpp  NBPasswordInput.hpp  NBPatternPad.cpp  NBPatternPad.hpp
app/Vault/MicroDB/: AbZip.cpp  AbZip.h  CentralDirFileHeader.cpp  CentralDirFileHeader.h  EndOfCentralDir.cpp  EndOfCentralDir.h  ExtraFields.cpp  ExtraFields.h  LocalFileHeader.cpp  LocalFileHeader.h  Utils.cpp  Utils.h  ZipCentralDir.cpp  ZipCentralDir.h  ZipDirIterator.cpp  ZipDirIterator.h  ZipFileInfo.cpp  ZipFileInfo.h  abzip_p.h  iobuffer.cpp  iobuffer.h  zipglobal.h
app/Vault/Salsa20/: NBSalsa20.cpp  NBSalsa20.hpp  Salsa20.hpp  Salsa20.inl
app/debian/: changelog  control  copyright  newbreeze.links  newbreeze.manpages  newbreeze3.1  postinst  rules
common/: CMakeLists.txt  NBPluginInterface.hpp  common.hpp  common.pro  meson.build
common/AppFile/: NBAppEngine.cpp  NBAppEngine.hpp  NBAppFile.cpp  NBAppFile.hpp
common/Archive/: NBArchive.cpp  NBArchive.hpp  NBBZip2.cpp  NBGZip.cpp  NBLZip.cpp  NBLibBZip2.cpp  NBLibBZip2.hpp  NBLibGZip.cpp  NBLibGZip.hpp  NBLibLzma.cpp  NBLibLzma.hpp  NBLibLzma2.cpp  NBLibLzma2.hpp  NBLzma.cpp  NBLzma2.cpp  lz4dec.c  lz4io.c  lz4io.h
common/DeviceInfo/: NBDeviceInfo.cpp  NBDeviceInfo.hpp  NBDeviceInfoUnix.cpp  NBDeviceInfo_p.hpp
common/DeviceInfo/QVolumeInfo/: QVolumeInfo.hpp
common/MimeHandler/: NBMimeDatabase.cpp  NBMimeGlobPattern.cpp
common/MimeTypes/: QMimeDatabase.cpp  QMimeDatabase_p.hpp  QMimeGlobPattern.cpp  QMimeGlobPattern_p.hpp  QMimeMagicRule.cpp  QMimeMagicRuleMatcher.cpp  QMimeMagicRuleMatcher_p.hpp  QMimeMagicRule_p.hpp  QMimeProvider.cpp  QMimeProvider_p.hpp  QMimeType.cpp  QMimeTypeParser.cpp  QMimeTypeParser_p.hpp  QMimeType_p.hpp
common/QCryptographicHash5/: QCryptographicHash5.cpp  QCryptographicHash5.hpp
common/QStorageInfo/: QStorageInfo.cpp  QStorageInfo_p.hpp  QStorageInfo_unix.cpp
common/SimpleCrypt/: SimpleCrypt.cpp
common/StandardPaths/: QStandardPaths.cpp  QStandardPaths_unix.cpp
common/SystemInfo/: NBSystemInfo.cpp
common/Tools/: NBTools.cpp  NBTools.hpp
common/XDG/: NBXdg.cpp
common/debian/: README  changelog  control  copyright  newbreeze-dev.install  rules
common/include/: NBAppEngine.hpp  NBAppFile.hpp  NBArchive.hpp  NBBZip2.hpp  NBDeviceInfo.hpp  NBGZip.hpp  NBLZip.hpp  NBLibBZip2.hpp  NBLibGZip.hpp  NBLibLzma.hpp  NBLibLzma2.hpp  NBLzma.hpp  NBLzma2.hpp  NBSystemInfo.hpp  NBTools.hpp  NBXdg.hpp  QCryptographicHash5.hpp  QMimeDatabase.hpp  QMimeType.hpp  QStandardPaths.hpp  QStorageInfo.hpp  common.hpp  lz4dec.h  newbreeze.hpp
common/include/newbreeze/: NBDeviceInfo.hpp  NBPluginInterface.hpp  NBTools.hpp  NBXdg.hpp  common.hpp  newbreeze.hpp
data/: data.qrc  (+5 more)
plugins/AVPlugin/: AVPlugin.pro  Global.hpp  NBAVPlayer.cpp  NBAVPlayer.hpp  NBAVPlugin.cpp  NBAVPlugin.hpp  meson.build
plugins/Default/: Default-xenial.pro  Default.pro  Global.hpp  NBPreviewWidget.cpp  NBPreviewWidget.hpp  NBPreviewWidget4.cpp  NBPreviewWidget4.hpp  meson.build
plugins/Default/ArchiveExamine/: NBArchiveExamine.cpp  NBArchiveExamine.hpp  NBArchiveTreeModel.cpp  NBArchiveTreeModel.hpp  NBTreeBranch.cpp
plugins/Default/DjvuDisplay/: NBDjvuDisplay.cpp  NBDjvuDisplay.hpp
plugins/Default/ImagePeek/: NBImagePeek.cpp  NBImagePeek.hpp
plugins/Default/MimeHandler/: NBMimeDatabase_p.hpp  NBMimeMagicRuleMatcher_p.hpp  NBStandardPaths.cpp  NBStandardPaths.hpp
plugins/Default/OdfOgle/: NBOdfOgle.cpp  NBOdfOgle.hpp  docmargin.cpp  kzip.cpp  kzip.h  odt_reader.cpp
plugins/Default/PdfPeep/: MuPdfDocument.cpp  MuPdfDocument.hpp  NBPdfPeep.cpp  NBPdfPeep.hpp  PdfDocument.cpp  PdfDocument.hpp  PdfView.cpp  PdfView.hpp
plugins/Default/WebWatch/: NBWebWatch.cpp  NBWebWatch.hpp  NBWebWatch4.cpp  NBWebWatch4.hpp
plugins/MarkDown/: CMakeLists.txt  Global.hpp  MarkDown.pro  NBMarkDownPreviewWidget.cpp  NBMarkDownPreviewWidget.hpp  buffer.c  index.html  markdown.c  markdown.css  markdown.qrc  meson.build
plugins/PdfPlugin/: Global.hpp  NBPdfPeep.cpp  NBPdfPeep.hpp  NBPdfPlugin.cpp  NBPdfPlugin.hpp  PdfPlugin.pro  README.md  meson.build
plugins/TextEdit/: Global.hpp  NBTextEdit.pro  NBTextEditPlugin.cpp  NBTextEditPlugin.hpp  TextEdit.pro  meson.build
plugins/Thumbnailer/: Global.hpp  NBThumbnailerPlugin.cpp  NBThumbnailerPlugin.hpp  Thumbnailer.pro  meson.build
(+1071 files in other folders)
