project(
		'desq-session',
	  'c',
		'cpp',
		version: '1.0.0',
		license: 'MIT',
		meson_version: '>=0.59.0',
		default_options: [
				'cpp_std=c++17',
				'c_std=c11',
				'warning_level=2',
				'werror=false',
		],
)

add_global_arguments( '-DPROJECT_VERSION="v@0@"'.format( meson.project_version() ), language : 'cpp' )
add_project_link_arguments( ['-rdynamic','-fPIC'], language:'cpp' )

Qt5 = import( 'qt5' )
Qt5Deps = dependency( 'qt5', modules: [ 'Core', 'Gui', 'Widgets', 'Network', 'DBus', 'Concurrent' ] )
NB3Common = declare_dependency(
    link_args : [ '-L/usr/lib/x86_64-linux-gnu', '-lnewbreeze-common' ],
    include_directories : include_directories( [ '/usr/include', '/usr/include/newbreeze' ] )
)
zlib = dependency( 'zlib' )
lzma = dependency( 'liblzma' )
archive = dependency( 'libarchive' )
mediainfo = dependency( 'libmediainfo' )
termwidget = dependency( 'qtermwidget5' )
bz2 = declare_dependency(
    link_args : [ '-L/usr/lib/x86_64-linux-gnu', '-lbz2' ],
    include_directories : include_directories( '/usr/include' )
)
lz = declare_dependency(
    link_args : [ '-L/usr/lib/x86_64-linux-gnu', '-llz' ],
    include_directories : include_directories( '/usr/include' )
)

Headers = [
		'Core/ArgParser/NBCLParser.hpp',
		'Core/AutoMount/NBAutoMount.hpp',
		'Core/AutoMount/udisks2.h',
		'Core/BookmarkInfo/NBBookmarkInfo.hpp',
		'Core/DeleteManager/NBDeleteManager.hpp',
		'Core/FSWatcher/NBFileSystemWatcher.hpp',
		'Core/IconProvider/NBIconManager.hpp',
		'Core/Logger/NBLogger.hpp',
		'Core/Other/NBFunctions.hpp',
		'Core/ProcessManager/NBAbstractProcess.hpp',
		'Core/ProcessManager/NBDeleteProcess.hpp',
		'Core/ProcessManager/NBIOProcess.hpp',
		'Core/ProcessManager/NBProcessManager.hpp',
		'Global.hpp',
		'Gui/Dialogs/AppEditor/NBAppEditorDialog.hpp',
		'Gui/Dialogs/Archive/NBArchiveDialog.hpp',
		'Gui/Dialogs/BugReporter/NBBugReporter.hpp',
		'Gui/Dialogs/ConfirmDeleteDialog/NBConfirmDeleteDialog.hpp',
		'Gui/Dialogs/Dialog/AboutNB.hpp',
		'Gui/Dialogs/Dialog/NBDialog.hpp',
		'Gui/Dialogs/FileDialog/NBFileDialog.hpp',
		'Gui/Dialogs/IOErrorsDialog/NBErrorsDialog.hpp',
		'Gui/Dialogs/MessageDialog/NBMessageDialog.hpp',
		'Gui/Dialogs/NewNodeDialog/NBNewNodeDialog.hpp',
		'Gui/Dialogs/PropertiesDialog/NBDefaultsWidget.hpp',
		'Gui/Dialogs/PropertiesDialog/NBDetailsWidget.hpp',
		'Gui/Dialogs/PropertiesDialog/NBPropertiesDialog.hpp',
		'Gui/Dialogs/PropertiesDialog/NBPropsWidget.hpp',
		'Gui/Dialogs/PropertiesDialog/NBPermsWidget.hpp',
		'Gui/Dialogs/PropertiesDialog/NBPreviewWidget.hpp',
		'Gui/Dialogs/PropertiesDialog/NBPSideBar.hpp',
		'Gui/Dialogs/RenameDialog/NBRenameDialog.hpp',
		'Gui/Dialogs/RunCmdDialog/NBRunCmdDialog.hpp',
		'Gui/Dialogs/SettingsManager/NBSettingsManager.hpp',
		'Gui/Dialogs/SettingsManager/NBSGeneralWidget.hpp',
		'Gui/Dialogs/SettingsManager/NBSIconsWidget.hpp',
		'Gui/Dialogs/SettingsManager/NBSKeyBindingsWidget.hpp',
		'Gui/Dialogs/SettingsManager/NBSPluginsWidget.hpp',
		'Gui/Dialogs/SettingsManager/NBSSideBar.hpp',
		'Gui/Dialogs/SettingsManager/NBSStyleWidget.hpp',
		'Gui/Dialogs/SettingsManager/NBSTerminalWidget.hpp',
		'Gui/Dialogs/SettingsManager/qkeysequencewidget.h',
		'Gui/Dialogs/SettingsManager/qkeysequencewidget_p.h',
		'Gui/Dialogs/StartupWizard/NBStartupWizard.hpp',
		'Gui/ModelViews/Models/ArchiveModel/NBArchiveTreeModel.hpp',
		'Gui/ModelViews/Models/ArchiveModel/NBTreeBranch.hpp',
		'Gui/ModelViews/Models/ItemViewModel/NBFileInfoGatherer.hpp',
		'Gui/ModelViews/Models/ItemViewModel/NBItemViewModel.hpp',
		'Gui/ModelViews/Models/ItemViewModel/NBItemViewNode.hpp',
		'Gui/ModelViews/Models/ItemViewModel/NBThumbnailer.hpp',
		'Gui/ModelViews/Models/MimeTypeModel/NBMimeTypeModel.hpp',
		'Gui/ModelViews/Models/MimeTypeModel/NBMimeTypeNode.hpp',
		'Gui/ModelViews/Models/TrashModel/NBTrashModel.hpp',
		'Gui/ModelViews/Views/IconView/NBIconDelegate.hpp',
		'Gui/ModelViews/Views/IconView/NBIconView.hpp',
		'Gui/ModelViews/Views/IconView/NBIconViewRestricted.hpp',
		'Gui/ModelViews/Views/OpenWithView/NBOpenWithDelegate.hpp',
		'Gui/ModelViews/Views/OpenWithView/NBOpenWithView.hpp',
		'Gui/ModelViews/Views/TrashView/NBTrashDelegate.hpp',
		'Gui/ModelViews/Views/TrashView/NBTrashView.hpp',
		'Gui/ModelViews/Views/DirectoryView/NBDirectoryView.hpp',
		'Gui/NewBreezeUI/Application/NBApplication.hpp',
		'Gui/NewBreezeUI/Application/qtlocalpeer.hpp',
		'Gui/NewBreezeUI/NewBreeze.hpp',
		'Gui/NewBreezeUI/NewBreezeTray.hpp',
		'Gui/Others/GuiFunctions/NBGuiFunctions.hpp',
		'Gui/Others/PluginManager/NBPluginManager.hpp',
		'Gui/Others/Settings/NBSettings.hpp',
		'Gui/Widgets/AddressBar/NBAddressBar.hpp',
		'Gui/Widgets/BreadCrumbsBar/FlowLayout.hpp',
		'Gui/Widgets/BreadCrumbsBar/NBCrumb.hpp',
		'Gui/Widgets/BreadCrumbsBar/NBCrumbsBar.hpp',
		'Gui/Widgets/BreadCrumbsBar/NBExtraCrumb.hpp',
		'Gui/Widgets/Buttons/NBButton.hpp',
		'Gui/Widgets/Buttons/NBButtons.hpp',
		'Gui/Widgets/Buttons/NBPushButton.hpp',
		'Gui/Widgets/ContextMenu/NBContextMenu.hpp',
		'Gui/Widgets/ContextMenu/NBCategoryMenu.hpp',
		'Gui/Widgets/CustomActions/NBCustomActions.hpp',
		'Gui/Widgets/FolderView/NBFolderView.hpp',
		'Gui/Widgets/GuiWidgets/NBFilterWidget.hpp',
		'Gui/Widgets/GuiWidgets/NBGuiWidgets.hpp',
		'Gui/Widgets/GuiWidgets/NBLabels.hpp',
		'Gui/Widgets/GuiWidgets/NBProgressBar.hpp',
		'Gui/Widgets/InfoBar/NBInfoBar.hpp',
		'Gui/Widgets/InfoPanel/NBInfoPanel.hpp',
		'Gui/Widgets/MediaInfo/NBMediaInfo.hpp',
		'Gui/Widgets/ProcessManager/NBProcessManagerUI.hpp',
		'Gui/Widgets/ProcessManager/NBProcessWidget.hpp',
		'Gui/Widgets/SideBar/NBSideBar.hpp',
		'Gui/Widgets/SideBar/NBSideBarEntry.hpp',
		'Gui/Widgets/SideBar/NBSideBarMenu.hpp',
		'Gui/Widgets/SidePanel/NBSidePanel.hpp',
		'Gui/Widgets/SidePanel/NBSidePanelItem.hpp',
		'Gui/Widgets/SystemMenu/NBMenuButton.hpp',
		'Gui/Widgets/SystemMenu/NBSystemMenu.hpp',
		'Gui/Widgets/Terminal/NBTerminal.hpp',
		'Gui/Widgets/Terminal/NBTermWidget.hpp',
		'Gui/Widgets/Terminal/NBTSettingsDialog.hpp',
		'Gui/Widgets/Terminal/TtyTabWidget.hpp',
		'Gui/Widgets/TrashManager/NBTrashManager.hpp',
		'optionparser.hpp',
		'Vault/NBCircle.hpp',
		'Vault/NBVault.hpp',
		'Vault/NBVaultDatabase.hpp',
		'Vault/EncFS/NBEncFS.hpp',
		'Vault/KeyDialog/NBPasswordDialog.hpp',
		'Vault/KeyDialog/NBPasswordEdit.hpp',
		'Vault/KeyDialog/NBPasswordInput.hpp',
		'Vault/KeyDialog/NBPatternPad.hpp',
		'Vault/Salsa20/NBSalsa20.hpp',
		'Vault/Salsa20/Salsa20.hpp'
]

Sources = [
		'Core/ArgParser/NBCLParser.cpp',
		'Core/AutoMount/NBAutoMount.cpp',
		'Core/AutoMount/udisks2.cpp',
		'Core/BookmarkInfo/NBBookmarkInfo.cpp',
		'Core/DeleteManager/NBDeleteManager.cpp',
		'Core/FSWatcher/NBFileSystemWatcher.cpp',
		'Core/IconProvider/NBIconManager.cpp',
		'Core/Logger/NBLogger.cpp',
		'Core/Other/NBFunctions.cpp',
		'Core/ProcessManager/NBDeleteProcess.cpp',
		'Core/ProcessManager/NBIOProcess.cpp',
		'Core/ProcessManager/NBProcessManager.cpp',
		'Gui/Dialogs/AppEditor/NBAppEditorDialog.cpp',
		'Gui/Dialogs/Archive/NBArchiveDialog.cpp',
		'Gui/Dialogs/BugReporter/NBBugReporter.cpp',
		'Gui/Dialogs/ConfirmDeleteDialog/NBConfirmDeleteDialog.cpp',
		'Gui/Dialogs/Dialog/AboutNB.cpp',
		'Gui/Dialogs/Dialog/NBDialog.cpp',
		'Gui/Dialogs/FileDialog/NBFileDialog.cpp',
		'Gui/Dialogs/IOErrorsDialog/NBErrorsDialog.cpp',
		'Gui/Dialogs/MessageDialog/NBMessageDialog.cpp',
		'Gui/Dialogs/NewNodeDialog/NBNewNodeDialog.cpp',
		'Gui/Dialogs/PropertiesDialog/NBDefaultsWidget.cpp',
		'Gui/Dialogs/PropertiesDialog/NBDetailsWidget.cpp',
		'Gui/Dialogs/PropertiesDialog/NBPropertiesDialog.cpp',
		'Gui/Dialogs/PropertiesDialog/NBPropsWidget.cpp',
		'Gui/Dialogs/PropertiesDialog/NBPermsWidget.cpp',
		'Gui/Dialogs/PropertiesDialog/NBPreviewWidget.cpp',
		'Gui/Dialogs/PropertiesDialog/NBPSideBar.cpp',
		'Gui/Dialogs/RenameDialog/NBRenameDialog.cpp',
		'Gui/Dialogs/RunCmdDialog/NBRunCmdDialog.cpp',
		'Gui/Dialogs/SettingsManager/NBSettingsManager.cpp',
		'Gui/Dialogs/SettingsManager/NBSGeneralWidget.cpp',
		'Gui/Dialogs/SettingsManager/NBSIconsWidget.cpp',
		'Gui/Dialogs/SettingsManager/NBSKeyBindingsWidget.cpp',
		'Gui/Dialogs/SettingsManager/NBSPluginsWidget.cpp',
		'Gui/Dialogs/SettingsManager/NBSSideBar.cpp',
		'Gui/Dialogs/SettingsManager/NBSStyleWidget.cpp',
		'Gui/Dialogs/SettingsManager/NBSTerminalWidget.cpp',
		'Gui/Dialogs/SettingsManager/qkeysequencewidget.cpp',
		'Gui/Dialogs/StartupWizard/NBStartupWizard.cpp',
		'Gui/ModelViews/Models/ArchiveModel/NBArchiveTreeModel.cpp',
		'Gui/ModelViews/Models/ArchiveModel/NBTreeBranch.cpp',
		'Gui/ModelViews/Models/ItemViewModel/NBFileInfoGatherer.cpp',
		'Gui/ModelViews/Models/ItemViewModel/NBItemViewModel.cpp',
		'Gui/ModelViews/Models/ItemViewModel/NBItemViewNode.cpp',
		'Gui/ModelViews/Models/ItemViewModel/NBThumbnailer.cpp',
		'Gui/ModelViews/Models/MimeTypeModel/NBMimeTypeModel.cpp',
		'Gui/ModelViews/Models/MimeTypeModel/NBMimeTypeNode.cpp',
		'Gui/ModelViews/Models/TrashModel/NBTrashModel.cpp',
		'Gui/ModelViews/Views/IconView/NBIconDelegate.cpp',
		'Gui/ModelViews/Views/IconView/NBIconView.cpp',
		'Gui/ModelViews/Views/IconView/NBIconViewRestricted.cpp',
		'Gui/ModelViews/Views/OpenWithView/NBOpenWithDelegate.cpp',
		'Gui/ModelViews/Views/OpenWithView/NBOpenWithView.cpp',
		'Gui/ModelViews/Views/TrashView/NBTrashDelegate.cpp',
		'Gui/ModelViews/Views/TrashView/NBTrashView.cpp',
		'Gui/ModelViews/Views/DirectoryView/NBDirectoryView.cpp',
		'Gui/NewBreezeUI/Application/NBApplication.cpp',
		'Gui/NewBreezeUI/Application/qtlocalpeer.cpp',
		'Gui/NewBreezeUI/NewBreeze.cpp',
		'Gui/NewBreezeUI/NewBreezeTray.cpp',
		'Gui/Others/GuiFunctions/NBGuiFunctions.cpp',
		'Gui/Others/NBStartup.cpp',
		'Gui/Others/PluginManager/NBPluginManager.cpp',
		'Gui/Others/Settings/NBSettings.cpp',
		'Gui/Widgets/AddressBar/NBAddressBar.cpp',
		'Gui/Widgets/BreadCrumbsBar/FlowLayout.cpp',
		'Gui/Widgets/BreadCrumbsBar/NBCrumb.cpp',
		'Gui/Widgets/BreadCrumbsBar/NBCrumbsBar.cpp',
		'Gui/Widgets/BreadCrumbsBar/NBExtraCrumb.cpp',
		'Gui/Widgets/Buttons/NBButton.cpp',
		'Gui/Widgets/Buttons/NBButtons.cpp',
		'Gui/Widgets/Buttons/NBPushButton.cpp',
		'Gui/Widgets/ContextMenu/NBContextMenu.cpp',
		'Gui/Widgets/ContextMenu/NBCategoryMenu.cpp',
		'Gui/Widgets/CustomActions/NBCustomActions.cpp',
		'Gui/Widgets/FolderView/NBFolderView.cpp',
		'Gui/Widgets/GuiWidgets/NBFilterWidget.cpp',
		'Gui/Widgets/GuiWidgets/NBGuiWidgets.cpp',
		'Gui/Widgets/GuiWidgets/NBLabels.cpp',
		'Gui/Widgets/GuiWidgets/NBProgressBar.cpp',
		'Gui/Widgets/InfoBar/NBInfoBar.cpp',
		'Gui/Widgets/InfoPanel/NBInfoPanel.cpp',
		'Gui/Widgets/MediaInfo/NBMediaInfo.cpp',
		'Gui/Widgets/ProcessManager/NBProcessManagerUI.cpp',
		'Gui/Widgets/ProcessManager/NBProcessWidget.cpp',
		'Gui/Widgets/SideBar/NBSideBar.cpp',
		'Gui/Widgets/SideBar/NBSideBarEntry.cpp',
		'Gui/Widgets/SideBar/NBSideBarMenu.cpp',
		'Gui/Widgets/SidePanel/NBSidePanel.cpp',
		'Gui/Widgets/SidePanel/NBSidePanelItem.cpp',
		'Gui/Widgets/SystemMenu/NBMenuButton.cpp',
		'Gui/Widgets/SystemMenu/NBSystemMenu.cpp',
		'Gui/Widgets/Terminal/NBTerminal.cpp',
		'Gui/Widgets/Terminal/NBTermWidget.cpp',
		'Gui/Widgets/Terminal/NBTSettingsDialog.cpp',
		'Gui/Widgets/Terminal/TtyTabWidget.cpp',
		'Gui/Widgets/TrashManager/NBTrashManager.cpp',
		'Main.cpp',
		'Vault/NBCircle.cpp',
		'Vault/NBVault.cpp',
		'Vault/NBVaultDatabase.cpp',
		'Vault/KeyDialog/NBPasswordDialog.cpp',
		'Vault/KeyDialog/NBPasswordEdit.cpp',
		'Vault/KeyDialog/NBPasswordInput.cpp',
		'Vault/KeyDialog/NBPatternPad.cpp',
		'Vault/EncFS/NBEncFS.cpp',
		'Vault/Salsa20/NBSalsa20.cpp'
]

Includes = include_directories(
		[
				'Core/ArgParser',
				'Core/AutoMount',
				'Core/BookmarkInfo',
				'Core/DeleteManager',
				'Core/FSWatcher',
				'Core/IconProvider',
				'Core/Logger',
				'Core/Other',
				'Core/ProcessManager',
				'Gui/Dialogs',
				'Gui/Dialogs/AppEditor',
				'Gui/Dialogs/Archive',
				'Gui/Dialogs/BookmarkEditor',
				'Gui/Dialogs/BugReporter',
				'Gui/Dialogs/ConfirmDeleteDialog',
				'Gui/Dialogs/Dialog',
				'Gui/Dialogs/FileDialog',
				'Gui/Dialogs/IOErrorsDialog',
				'Gui/Dialogs/MessageDialog',
				'Gui/Dialogs/NewNodeDialog',
				'Gui/Dialogs/PropertiesDialog',
				'Gui/Dialogs/RenameDialog',
				'Gui/Dialogs/RunCmdDialog',
				'Gui/Dialogs/SettingsManager',
				'Gui/Dialogs/StartupWizard',
				'Gui/ModelViews',
				'Gui/ModelViews/Models',
				'Gui/ModelViews/Models/ArchiveModel',
				'Gui/ModelViews/Models/DirTreeModel',
				'Gui/ModelViews/Models/ItemViewModel',
				'Gui/ModelViews/Models/ItemViewModel/epeg',
				'Gui/ModelViews/Models/MimeTypeModel',
				'Gui/ModelViews/Models/TrashModel',
				'Gui/ModelViews/Views',
				'Gui/ModelViews/Views/DirectoryView',
				'Gui/ModelViews/Views/IconView',
				'Gui/ModelViews/Views/OpenWithView',
				'Gui/ModelViews/Views/TrashView',
				'Gui/NewBreezeUI',
				'Gui/NewBreezeUI/Application',
				'Gui/Others',
				'Gui/Others/GuiFunctions',
				'Gui/Others/PluginManager',
				'Gui/Others/Settings',
				'Gui/Widgets',
				'Gui/Widgets/AddressBar',
				'Gui/Widgets/BreadCrumbsBar',
				'Gui/Widgets/Buttons',
				'Gui/Widgets/ContextMenu',
				'Gui/Widgets/CustomActions',
				'Gui/Widgets/FolderView',
				'Gui/Widgets/GuiWidgets',
				'Gui/Widgets/InfoBar',
				'Gui/Widgets/InfoPanel',
				'Gui/Widgets/MediaInfo',
				'Gui/Widgets/ProcessManager',
				'Gui/Widgets/SideBar',
				'Gui/Widgets/SidePanel',
				'Gui/Widgets/SystemMenu',
				'Gui/Widgets/Terminal',
				'Gui/Widgets/TrashManager',
				'Vault',
				'Vault/EncFS',
				'Vault/KeyDialog',
				'Vault/Salsa20'
		]
)

Mocs = Qt5.compile_moc(
 		headers : Headers,
	 	dependencies: Qt5Deps,
		include_directories: [ Includes, '/usr/include/newbreeze' ]
)

Resources = Qt5.compile_resources(
 		sources : [	'NewBreeze.qrc', '../data/data.qrc' ],
	 	dependencies: Qt5Deps
)

nb3 = executable(
    'newbreeze3', [ Sources, Mocs, Resources ],
    dependencies: [ Qt5Deps, NB3Common, zlib, lzma, archive, mediainfo, termwidget, bz2, lz ],
		include_directories: [ Includes, '/usr/include/newbreeze' ],
    install: true
)

summary = [
	'',
	'----------------',
	'NewBreeze @0@'.format( meson.project_version() ),
	'----------------',
	''
]
message( '\n'.join( summary ) )
